--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,14 +1,14 @@
 .linked_logo:hover{
-    box-shadow: 0rem 0rem 1rem rgba(46, 116, 255, 0.75);
+    filter: drop-shadow(0rem 0rem 0.5rem rgba(46, 116, 255, 0.7));
     z-index: 10;
 }
 
 .github_logo:hover{
-    box-shadow: 0rem 0rem 1rem rgba(95, 96, 99, 0.75);
+    filter: drop-shadow(0rem 0rem 0.5rem rgba(136, 137, 141, 0.5));
     z-index: 10;
 }
 
 .gmail_logo:hover{
-    box-shadow: 0rem 0rem 1rem rgba(250, 73, 73, 0.75);
+    filter: drop-shadow(0rem 0rem 0.5rem rgba(250, 73, 73, 0.5));
     z-index: 10;
 }
